# nfc2mqtt

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
nfc2mqtt/: mqtt.py  utils.py
nfc2mqtt/service/: __init__.py
samples/: config.yaml  nfc2mqtt.service
