[metadata]
name = nfc2mqtt
description = "nfc2mqtt reads NFC tags with nfcpy and push them to MQTT"
long_description = file:README.md

[files]
packages =
  nfc2mqtt

[entry_points]
console_scripts =
    nfc2mqtt = nfc2mqtt.service:main

[wheel]
universal = 1

[flake8]
ignore = E111
max-line-length = 160
